katars/tests/snaps/snapshots/snap_errors__index_set_out_of_bounds.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"let a = [10, 20, 30]\\na[5] = 99\")"
---
Error: index out of bounds: 5, len 3
   ╭─[<test>:2:1]
   │
 2 │ a[5] = 99
   │ ────┬────  
   │     ╰────── index out of bounds: 5, len 3
───╯
